update lein/profiles